					Fixed a NullPointerException when a player logs in.
					Fixed multiple NullPointerExceptions when running any command that sets a statistic.
	3.2.3	11/27/2014
				Fixed the respond message saying null reported someone.
	3.2.4	12/24/2014
				Fixed an IllegalArgumentException when players try to alter a claimed report.
	3.2.5	12/26/2014
				Fixed a Spigot specific error when trying to respond to a report where an anonymous player was reported.
	3.2.6	12/31/2014
				Fixed a NullPointerException when trying to respond to a report where the sender or reported player is offline.
	3.2.6.1	10/24/2015
				Changed from Bukkit's Maven repository to Spigot's Maven repository.
				Updated Bukkit API to 1.8.8-R0.1-SNAPSHOT.
	3.2.6.2	3/30/2016
				Updated Bukkit API to 1.9.2-R0.1-SNAPSHOT.
				Updated metrics to R8-SNAPSHOT.
	3.2.7	5/6/2017
				Fixed checking for remote locale files causing an error since Dropbox changed their public folder system.
				New Configuration Options:
					general.messaging.alerts.reportedPlayerLogin.enabled - Enable messaging when a reported player logs in.
                    general.messaging.alerts.reportedPlayerLogin.toPlayer - Enable sending messages to player that a reported player logged in.
                    general.messaging.alerts.reportedPlayerLogin.toConsole - Enable sending messages to the console that a reported player logged in.
    3.3.0   11/16/2018
                Updated Bukkit API to 1.13.2-R0.1-SNAPSHOT.
                Features:
                    Use Vault instead of PermissionsEx for player permissions.
                    Use bStats instead of MCStats for plugin statistic collection.
                Fixes:
                    Fixed the build being broken from a few dependencies that dead and no longer available (PermissionsEx and MCStats).
    3.3.1   11/16/2018
                Fixed error when loading permissions when Vault is not provided.
    3.3.2
                Updated Bukkit API to 1.14.3-R0.1-SNAPSHOT